# Genre_Predictor

./: README.md  pyproject.toml  scrap.py  testing.ipynb
GENRE_PREDICTOR/: Spotify_project.py  algorithms.py  boxplot_analysis.py  data_analysis.py  graphics.py  importing.py  main.py  moment_analysis.py
src/: Spotify_project.py  henry.txt  scrap.py
tests/: test-Genre_Predictor.py  test_Genre_Predictor.py
